ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Protected/Protected2/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Protected/Protected2/input.ts:1:1
  |
1 | protected module M {
  | ^^^^^^^^^

error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Protected/Protected2/input.ts:1:11
  |
1 | protected module M {
  |           ^^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Protected/Protected2/input.ts:1:1
  |
1 | protected module M {
  | ^^^^^^^^^

